finally parsing data right

--- a/Homework2/cafornaca/index.html
+++ b/Homework2/cafornaca/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ECS 272 InfoVis Assignment 3</title>
+    <title>Charlie Fornaca's ECS-272 Homework 2 Dashboard</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
       #tooltip {
         min-width: 100px;
         min-height: 50px;
-        background-color: white;
+        background-color: rgb(231, 165, 182);
       }
     </style>
   </head>
   <body>
-    <h2>ECS 272 Assignment 3 D3 Template</h2>
+    <h2>Charlie Fornaca's ECS-272 Homework 2 Dashboard</h2>
     <div id="container"> <div id="tooltip"></div></div>
     <script src="main.js"></script>
   </body>
