--- a/Homework2/cafornaca/index.html
+++ b/Homework2/cafornaca/index.html
@@ -9,12 +9,21 @@
         min-width: 100px;
         min-height: 50px;
         background-color: rgb(231, 165, 182);
-      }
+        }
+
     </style>
   </head>
   <body>
     <h2>Charlie Fornaca's ECS-272 Homework 2 Dashboard</h2>
     <div id="container"> <div id="tooltip"></div></div>
     <script src="main.js"></script>
+
+    <select id="startDate" class="start" onchange="selectStart()">
+        <option value="-1" selected disabled>Start</option>
+    </select>
+    <select id="endDate" class="end" onchange="selectEnd()">
+        <option value="-1" selected disabled>End</option>
+    </select>
+
   </body>
 </html>
