one more to go you can do this

--- a/Homework2/cafornaca/index.html
+++ b/Homework2/cafornaca/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <title>Charlie Fornaca's ECS-272 Homework 2 Dashboard</title>
         <script src="https://d3js.org/d3.v6.min.js"></script>
-        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
     </head>
   
@@ -20,6 +19,9 @@
         </select>
 
         <div id="piechart"></div>
+
+        <div id="advplot"></div>
+
 
         <script src="main.js"></script>
 
