--- a/FinalProject/public/index.html
+++ b/FinalProject/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Butterfly Clusters</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preload" href="script.js" as="script">
@@ -7,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700;900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="icon" href="favorite.ico">
     </head>
     <body>
         <div id="intro-overlay" style="display:flex">
